tests/string/unterminated.rev
// error: string literal never closed with '"'
"a